...
          onPress={() => router.back()}
        >
          <Ionicons name="chevron-back" size={28} color="#D11B31" />
        </TouchableOpacity>
        <View style={styles.headerSpacer} />
        <TouchableOpacity
          testID="profileEditButton"
          style={styles.editIconButton}
          onPress={handleEdit}
        >
          <Ionicons name="create-outline" size={24} color="#D11B31" />
        </TouchableOpacity>
      </View>
...
