...
  };

  return (
    <View style={{ flex: 1 }}>
      <ScrollView style={styles.container} showsVerticalScrollIndicator={false}>
        <TouchableOpacity
          testID="homeProfileCard"
          onPress={() => router.push("/profile")}
          activeOpacity={0.8}
        >
          <ImageBackground
            source={require("../../assets/images/background.png")}
            style={styles.header}
...
